--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@ olhos</span></div>
 <span data-key="overview_18" class="xm-text split_text2562 f-semi" data-type="text" data-id="ibn5l22x90">Zoom de nível óptico</span>
 <span data-key="overview_19" class="xm-text split_text2561 f-light" data-type="text" data-id="mrvf8yoq51">Diferente dos zooms ópticos tradicionais, capture imagens com detalhes e qualidade excepcionais com o zoom no sensor e os algoritmos de super-resolução.</span>
 <div class="xm-scroll slider-section" data-type="scroll" data-id="noiiosind2">
-
 <div class="slider-2">
 
 <div data-index="0" class="slick-slide" tabindex="-1" aria-hidden="true">
@@ -202,9 +201,11 @@ olhos</span></div>
 <div data-index="2" tabindex="-1" class="slick-slide" aria-hidden="true">
 <div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/optical-grade01.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
 </div>
+
 <div data-index="3" tabindex="-1" class="slick-slide" aria-hidden="true">
 <div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/optical-grade02.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
 </div>
+
 </div>
 </div>
 
@@ -227,7 +228,7 @@ olhos</span></div>
 <span data-key="overview_22" class="xm-text split_text5407 f-semi" data-type="text" data-id="sbeh9fkcmo" style="width:1.953125rem;">Algoritmo de domínio RAW</span></div>
 <div class="div91">
 <span data-key="overview_23" class="xm-text split_text5406 f-semi" data-type="text" data-id="3ku6ejligw" style="width:2.33984375rem;">Especialista em cenário noturno</span></div>
-<div class="div92"><span data-key="overview_24" class="xm-text split_text5405 f-light" data-type="text" data-id="msahsst0s7" style="width:2.5546875rem;transform:translate(0rem, 0.2rem)">O algoritmo de domínio RAW foi ainda mais refinado ao reter mais detalhes da imagem, tornando as fotos noturnas ainda mais impressionantes.</span></div>
+<div class="div92"><span data-key="overview_24" class="xm-text split_text5405 f-light" data-type="text" data-id="msahsst0s7" style="width:2.5546875rem;">O algoritmo de domínio RAW foi ainda mais refinado ao reter mais detalhes da imagem, tornando as fotos noturnas ainda mais impressionantes.</span></div>
 </div>
 </div>
 
@@ -437,8 +438,7 @@ inicialização mais rápidas e fotografias mais nítidas para que cada foto que
 </div>
 
 <div class="div173"><span data-key="overview_59" class="xm-text split_text5371 f-semi" data-type="text" data-id="xmt5np6txq" style="width:1.171875rem">Espuma de absorção de energia</span></div>
-<div class="div176"><span data-key="overview_60" class="xm-text split_text5370 f-semi" data-type="text" data-id="h4nlh6nnie" style="width:1.140625rem;transform:translate(0rem, 0rem)">Reforço interno
-nas quatro bordas</span></div>
+<div class="div176"><span data-key="overview_60" class="xm-text split_text5370 f-semi" data-type="text" data-id="h4nlh6nnie" style="width:1.140625rem;">Reforço interno nas quatro bordas</span></div>
 <div class="div178"><span data-key="overview_61" class="xm-text split_text5369 f-semi" data-type="text" data-id="dvkdbheq0x" style="width:1.171875rem">Placa-mãe com espessura de 0,8 mm</span></div>
 </div>
 </div>
@@ -763,7 +763,7 @@ nas quatro bordas</span></div>
 <div class="div339"><span data-key="overview_115" class="xm-text split_text5318 f-semi" data-type="text" data-id="aaybv3espu">Apresenta uma tela de fácil visualização com alta taxa de atualização</span></div>
 </div>
 
-<div class="div340"><span data-key="overview_116" class="xm-text split_text5317 f-light" data-type="text" data-id="rgll5tv6wt" style="transform:translate(0rem, 0rem)">Com um excepcional visor OLED de 6,67&quot; que suporta uma taxa de atualização máxima de 120 Hz*. A tela grande e imersiva oferece desempenho perfeito e uma exibição vívida.</span></div>
+<div class="div340"><span data-key="overview_116" class="xm-text split_text5317 f-light" data-type="text" data-id="rgll5tv6wt">Com um excepcional visor OLED de 6,67&quot; que suporta uma taxa de atualização máxima de 120 Hz*. A tela grande e imersiva oferece desempenho perfeito e uma exibição vívida.</span></div>
 </div>
 
 <div class="spacer"></div>
@@ -1074,13 +1074,13 @@ nas quatro bordas</span></div>
 
 <div class="section div555 lazy" data-type="bg" data-id="ujdu10nhow" data-background-image="">
 <picture class="xm-picture image556">
-
 <img alt="Redmi Note 14" class="xm-img lazy" data-id="aavzopfvfx" src="https://i02.appmifile.com/152_operator_sg/21/01/2025/9ef58c3654ded87473717776dcca7dcf.jpg" />
 </picture>
 
 <div class="specs_link">
 <a class="xm-link split_text3726 f-bold" href="#" data-type="button" data-id="6aewo4psi2" target="_self">Consulte as especificações</a>
-<a class="xm-link split_text4521-bg" href="#" data-type="button" data-id="8wudftrudh" style="transform:translate(-0.01953125rem, 0rem)" target="_self"></a></div>
+<a class="xm-link split_text4521-bg" href="#" data-type="button" data-id="8wudftrudh" style="transform:translate(-0.01953125rem, 0rem)" target="_self"></a>
+</div>
 </div>
 
 <div class="section div561 lazy" data-type="bg" data-id="4202rtzsgg" data-background-image="">
