--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <link rel="stylesheet" href="https://i02.appmifile.com/i18n/fonts/MiSansLatin/index.css" />
-<link href="https://www.mi.com/sgp/spps_files/product/2.23.152/pc_v4/redmi-note-14/css/main.css" rel="stylesheet">
+<link href="./main-desktop.css" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
@@ -188,7 +188,7 @@ olhos</span></div>
 <span data-key="overview_18" class="xm-text split_text2562 f-semi" data-type="text" data-id="ibn5l22x90">Zoom de nível óptico</span>
 <span data-key="overview_19" class="xm-text split_text2561 f-light" data-type="text" data-id="mrvf8yoq51">Diferente dos zooms ópticos tradicionais, capture imagens com detalhes e qualidade excepcionais com o zoom no sensor e os algoritmos de super-resolução.</span>
 <div class="xm-scroll slider-section" data-type="scroll" data-id="noiiosind2">
-<div class="slider-2">
+<div class="slider-1">
 
 <div data-index="0" class="slick-slide" tabindex="-1" aria-hidden="true">
 <div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/optical-grade01.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
@@ -198,20 +198,12 @@ olhos</span></div>
 <div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/optical-grade02.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
 </div>
 
-<div data-index="2" tabindex="-1" class="slick-slide" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/optical-grade01.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
-</div>
-
-<div data-index="3" tabindex="-1" class="slick-slide" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/optical-grade02.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
-</div>
-
 </div>
 </div>
 
 <div class="btn-box">
 <div class="box-center">
-<span data-key="overview_20" class="xm-text split_text2559 f-medium activeText" data-type="text" data-id="iecsgkchth">1×</span>
+<span data-key="overview_20" class="xm-text split_text2559 f-medium" data-type="text" data-id="iecsgkchth">1×</span>
 <span data-key="overview_21" class="xm-text split_text2559 f-medium" data-type="text" data-id="nopgn62md9">3×</span>
 </div>
 </div>
@@ -309,49 +301,44 @@ vários recursos inteligentes para das asas à sua criatividade a qualquer hora 
 </div>
 </div>
 
-<div class="section ai-sky lazy" data-type="bg" data-id="qocr4zyoqv" data-background-image="">
-<div class="text-ai-sky">
-<div><span data-key="overview_43" class="xm-text split_text2536 f-bold" data-type="text" data-id="bq7mh8tpfc">IA Sky</span></div>
-<span data-key="overview_44" class="xm-text split_text2535 f-light" data-type="text" data-id="31e0l1o1os">Não deixe que o mau tempo estrague um momento perfeito, alterne sem esforço entre diferentes condições climáticas.</span>
+<div class="section ai-sky lazy" data-type="bg" data-id="qocr4zyoqv" data-background-image="" data-loaded="true">
+<div class="text-ai-sky"><div>
+<span data-key="overview_43" class="xm-text split_text2536 f-bold" data-type="text" data-id="bq7mh8tpfc">AI Sky</span>
 </div>
 
-<div class="xm-scroll slider-section" data-type="scroll" data-id="nijnsngd23">
-<div class="slick-slider slick-initialized" dir="ltr">
+<span data-key="overview_44" class="xm-text split_text2535 f-light" data-type="text" data-id="31e0l1o1os">Não deixe que o mau tempo estrague um momento perfeito, alterne sem esforço entre diferentes condições climáticas.</span></div>
+<div class="xm-scroll slider-section" data-type="scroll" data-id="nijnsngd23" style="transform:translate(0px, 0px)">
+<div class="slick-slider" dir="ltr">
+    
 <picture class="xm-picture slick-arrow slick-prev">
-<img alt="Redmi Note 14" style="display:block" class="xm-img lazy" data-id="8buo9n6t9r" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-left.png" />
-</picture>
+<img alt="Redmi Note 14" style="display:block" class="xm-img lazy" data-id="8buo9n6t9r" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-left.png" data-loaded="true"></picture>
 
-<div class="slider-2">
+<div class="slick-list">
+<div class="slider-2" style="width: 10rem;">
 
-<div data-index="0" class="slick-slide" tabindex="-1" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky1.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
+
+<div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
+<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky3.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky3.jpg" data-loaded="true"></div>
 </div>
 
-<div data-index="1" class="slick-slide" tabindex="-1" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky2.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
+<div data-index="3" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
+<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky4.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky4.jpg" data-loaded="true"></div></div>
+
+<div data-index="4" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
+<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky5.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky5.jpg" data-loaded="true"></div></div>
+
+<div data-index="5" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
+<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky6.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky6.jpg" data-loaded="true"></div>
 </div>
 
-<div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky3.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
-</div>
-
-<div data-index="3" class="slick-slide" tabindex="-1" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky4.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
-</div>
-
-<div data-index="4" class="slick-slide" tabindex="-1" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky5.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
-</div>
-
-<div data-index="5" class="slick-slide" tabindex="-1" aria-hidden="true">
-<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky6.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
-</div>
-</div>
-
+</div></div>
 
 <picture class="xm-picture slick-arrow slick-next">
-<img alt="Redmi Note 14" style="display:block" class="xm-img lazy" data-id="nf4q73s465" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-right.png" />
+<img alt="Redmi Note 14" style="display:block" class="xm-img lazy" data-id="nf4q73s465" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-right.png" data-loaded="true">
 </picture>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
