--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 <img alt="Redmi Note 14" class="xm-img" data-id="rajm2vq82e" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/PC/bc946cf7c2633db51136ac361607d30d.png" />
 </picture>
  
-<div class="div35"><span data-key="ksp_5" class="xm-text split_text5430 f-semi" data-type="text" data-id="7g5ldnl8ey" style="transform:translate(0rem, 0.109375rem)">Tela de 120 Hz para cuidados com os
-olhos</span></div>
+<div class="div35"><span data-key="ksp_5" class="xm-text split_text5430 f-semi" data-type="text" data-id="7g5ldnl8ey" style="transform:translate(0rem, 0.109375rem)">Tela de 120 Hz para cuidados com os olhos</span></div>
 </div>
 </div>
 
@@ -579,13 +578,6 @@ inicialização mais rápidas e fotografias mais nítidas para que cada foto que
 <picture class="xm-picture img2">
 <img alt="Redmi Note 14" class="xm-img lazy" data-id="man9snhgh3" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/Outstanding2.webp" />
 </picture>
-
-<div class="left-box">
-<span data-key="overview_87" class="xm-text split_text2484 f-semi" data-type="text" data-id="t42oxlvoif">para 55%</span>
-<span data-key="overview_86" class="xm-text split_text2483 f-semi" data-type="text" data-id="weflmlvutb">40 mins</span>
-<span data-key="overview_89" class="xm-text split_text2484 mt20 f-semi" data-type="text" data-id="id6za3cu6f">para 100%</span>
-<span data-key="overview_88" class="xm-text split_text2483 f-semi" data-type="text" data-id="hu8qrf720y">77 mins</span></div>
-<div class="right-box"><span data-key="overview_85" class="xm-text split_text2485 f-bold" data-type="text" data-id="e285sjpb73">Carregamento rápido de 33 W</span></div>
 </div>
 </div>
 </div>
