--- a/index.html
+++ b/index.html
@@ -317,17 +317,17 @@ vários recursos inteligentes para das asas à sua criatividade a qualquer hora 
 
 
 <div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
-<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky3.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky3.jpg" data-loaded="true"></div>
+<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky3.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky3.jpg" data-loaded="true"></div>
 </div>
 
 <div data-index="3" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
-<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky4.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky4.jpg" data-loaded="true"></div></div>
+<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky4.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky4.jpg" data-loaded="true"></div></div>
 
 <div data-index="4" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
-<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky5.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky5.jpg" data-loaded="true"></div></div>
+<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky5.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky5.jpg" data-loaded="true"></div></div>
 
 <div data-index="5" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 593px;">
-<div><img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky6.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky6.jpg" data-loaded="true"></div>
+<div><img class="lazy" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky6.jpg" alt="" tabindex="-1" style="width:100%;display:inline-block" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-14/pc/img/ai-sky6.jpg" data-loaded="true"></div>
 </div>
 
 </div></div>
